--- a/mping.1
+++ b/mping.1
@@ -74,5 +74,5 @@ A Unicode and ANSI-compatible terminal (e.g., xterm, Gnome Terminal)
 Matt Perkins <2025>
 
 .SH LICENSE
-MIT License
+GNU GENERAL PUBLIC LICENSE
 
