--- a/mping.1
+++ b/mping.1
@@ -1,4 +1,4 @@
-.TH MPING 1 "June 2025" "Version 1.0" "MPing Manual"
+.TH MPING 1 "July 2025" "Version 1.1" "MPing Manual"
 
 .SH NAME
 mping \- terminal-based ping visualiser with jitter and loss display
@@ -7,6 +7,7 @@ mping \- terminal-based ping visualiser with jitter and loss display
 .B mping
 [\fB\-s\fR|\fB\-\-silent\fR]
 [\fB\-h\fR|\fB\-\-help\fR]
+[\fB\-h\fR|\fB\-\-version\fR]
 \fIhost\fR
 
 .SH DESCRIPTION
