--- a/mping.1
+++ b/mping.1
@@ -1,4 +1,4 @@
-.TH MPING 1 "July 2025" "Version 1.1" "MPing Manual"
+.TH MPING 1 "July 2025" "Version 1.01" "MPing Manual"
 
 .SH NAME
 mping \- terminal-based ping visualiser with jitter and loss display
@@ -23,6 +23,10 @@ Disable the audible terminal bell on successful pings. Bell remains disabled on 
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 Display help and usage information, then exit.
+
+.TP
+\fB\-h\fR, \fB\-\-version\fR
+Display version.
 
 .SH COLOURS
 .TP
