--- a/mping.1
+++ b/mping.1
@@ -7,7 +7,7 @@ mping \- terminal-based ping visualiser with jitter and loss display
 .B mping
 [\fB\-s\fR|\fB\-\-silent\fR]
 [\fB\-h\fR|\fB\-\-help\fR]
-[\fB\-h\fR|\fB\-\-version\fR]
+[\fB\-v\fR|\fB\-\-version\fR]
 \fIhost\fR
 
 .SH DESCRIPTION
