--- a/mping.1
+++ b/mping.1
@@ -1,83 +1,86 @@
-.TH MPING 1 "July 2025" "Version 1.01" "MPing Manual"
+.TH MPING 1 "18 November 2025" "Version 1.02" "MPing Manual"
 
 .SH NAME
-mping \- terminal-based ping visualiser with jitter and loss display
+mping \- terminal-based visual ping utility with jitter and loss display
 
 .SH SYNOPSIS
 .B mping
-[\fB\-s\fR|\fB\-\-silent\fR]
-[\fB\-h\fR|\fB\-\-help\fR]
-[\fB\-v\fR|\fB\-\-version\fR]
-\fIhost\fR
+[\fB-s\fR|\fB--silent\fR]
+[\fB--max \fIms\fR]
+[\fB--ascii\fR]
+[\fB-h\fR|\fB--help\fR]
+[\fB-v\fR|\fB--version\fR]
+\fIhost_or_ip\fR
 
 .SH DESCRIPTION
-\fBMPing\fR is a terminal utility that visualises the latency, jitter, and packet loss of ICMP echo requests ("ping") to a target host or IP address. It produces a compact, real-time, horizontally scrolling graph using Unicode block characters, colour-coded by performance level.
+\fBMPing\fR is a terminal-based ping visualiser that sends ICMP echo requests to a host and displays the result using a horizontally scrolling graph.
 
-MPing runs continuously until interrupted (Ctrl+C).
+Each ping is shown using coloured Unicode blocks (or ASCII characters) and annotated with jitter and packet loss statistics in real time.
+
+MPing is intended to provide a clear, at-a-glance view of network quality in an xterm or console environment.
 
 .SH OPTIONS
 .TP
-\fB\-s\fR, \fB\-\-silent\fR
-Disable the audible terminal bell on successful pings. Bell remains disabled on timeouts.
+\fB-h\fR, \fB--help\fR
+Show usage and help information.
 
 .TP
-\fB\-h\fR, \fB\-\-help\fR
-Display help and usage information, then exit.
+\fB-s\fR, \fB--silent\fR
+Suppress the terminal bell. By default, a bell sounds after each successful ping.
 
 .TP
-\fB\-h\fR, \fB\-\-version\fR
-Display version.
+\fB-v\fR, \fB--version\fR
+Show the program version and exit.
 
-.SH COLOURS
 .TP
-\fBGreen\fR
-Latency below threshold — good performance.
-.TP
-\fBYellow\fR
-Latency exceeds dynamic scale threshold.
-.TP
-\fBRed\fR
-Timeout or unreachable — represents packet loss.
+\fB--max \fIms\fR
+Override automatic scale detection and use a fixed maximum latency (in milliseconds) for block height scaling.
 
-.SH OUTPUT
-The graph updates each second with a coloured block character representing the ping result. A summary line includes:
-
+.TP
+\fB--ascii\fR
+Use ASCII characters instead of Unicode blocks:
 .RS
-.IP \[bu] 2
-\fBLatency\fR (latest round-trip time)
-.IP \[bu]
-\fBJitter\fR (difference between last two latencies)
-.IP \[bu]
-\fBLoss\fR (% of timeouts since start)
+.TP
+\fB_\fR - latency OK
+.TP
+\fB-\fR - latency slow (over max threshold)
+.TP
+\fB~\fR - timeout or unreachable
 .RE
 
-Example:
+.SH OUTPUT
+Each line updates once per second and includes:
+.RS
+.IP \[bu] 2
+Visual bar of blocks (or ASCII characters) representing the last N pings
+.IP \[bu]
+Current latency (ms)
+.IP \[bu]
+Jitter (difference between last 2 RTTs)
+.IP \[bu]
+Packet loss percentage since start
+.RE
 
+Example output:
 .EX
 ▁▃▅▅▆▇█▇▇▆▅▃▁▁▁▁▁▁▁▁ timeout  jitter: 15.2ms  loss: 18%
 .EE
 
 .SH PLATFORM SUPPORT
-MPing automatically detects the system type:
+MPing automatically selects the appropriate ping command based on the platform:
 
 .TP
 \fBLinux\fR
-Uses \fBping -c 1 -W 1\fR
+ping -c 1 -W 1
+
 .TP
 \fBmacOS\fR
-Uses \fBping -c 1 -t 1\fR
-
-.SH DEPENDENCIES
-.TP
-Python 3.6+
-.TP
-ping (ICMP utility)
-.TP
-A Unicode and ANSI-compatible terminal (e.g., xterm, Gnome Terminal)
-
-.SH AUTHOR
-Matt Perkins <2025>
+ping -c 1 -t 1
 
 .SH LICENSE
-GNU GENERAL PUBLIC LICENSE
+MPing is licensed under the GNU General Public License version 3.
+See: https://www.gnu.org/licenses/gpl-3.0.html
+
+.SH AUTHOR
+Written by Matt Perkins, 2025.
 
